remove @Deprecated methods